--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,11 +1,20 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Consolas', monospace;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Consolas', monospace;
 }
 
 p {
-  font-family: 'Times New Roman', serif;
+  font-family: 'Consolas', monospace;
 }
+
+a {
+  font-family: 'Consolas', monospace;
+}
+
+code {
+  font-family: 'Consolas', monospace;
+}
+
